Jun 21, 2006

  * ADDED: silent(true) as option to rdf_load/2.

Apr 10, 2006

  * Enhanced: rdf_persistency.pl: sort files by size, assuming the schema
    are generally smaller and loading them first reduces re-hashing the
    database.

  * Enhanced: reduce the number of DB re-hashes by not calling the re-hash
    if no subPropertyOf or predicate is involved.

Mar 14, 2006

  * Added: rdf_persistency.pl, copied from SeRQL library.

Mar 13, 2006

  * Added rdf_tokenize_literal/2 and hooks to re-use and customize literal
    tokenization.

Mar 7, 2006

  * Completed integration of new AVL implementation.
  * Added rdf_litindex.pl

Mar 2, 2006

  * Documented first version of literal maps, providing additional indexing
    on literal values.

Feb 28, 2006

  * Modularization
    - Moved atom-specific operations to new source file atom.c
    - Moved locking operations to new source lock.c
    - Moved debugging support to new source debug.c

Feb 27, 2006

  * Fixed: crash in rdf_update/4 modifying a literal under a transaction.
    Michiel Hildebrand.

Feb 22, 2006

  * Fixed ordering issue on wide-character atoms.

Feb 9, 2006

  * Finished first version of indexed prefix and `like' search.

Feb 5, 2006

  * Allow 64-bit integers as arguments of literal(Int).

Feb 1, 2006

  * INTERNAL: completed first step of new literal handling code.  System
    passes internal tests under valgrind memory tests.  Fixed two
    memory leaks that pre-dated this change: using terms as literals
    and reclaiming the temporary datastructures using in rdf_save_db/2.

Jan 31, 2006

  * INTERNAL: 1-st step making literals first class citizens.
  * NOTE: The changes are numerous.  Be aware of possible stability
    problems.

Jan 17, 2006

  * ADDED: exported rdf_quote_uri/2 implementing unicode quoting rules for
    URIs.

Jan 11, 2006

  * FIXED: Avoid exception in rdf_unload/1

Dec 18, 2005

  * FIXED: Added simpleminded handling for updating the database from
    within a monitor.
