@@ -1,3 +1,7 @@
+Jun 26, 2006
+
+  * Fail silent on rdf(literal(x), ...) and rdf(S, literal(x), ...).
+
 Jun 21, 2006
 
   * ADDED: silent(true) as option to rdf_load/2.
